--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="footer-content">
-        <img src="/images/metulogo.png" alt="METU Logo" class="footer-logo">
+        <img src="/images/metulogo.png" alt="METU Logo" class="footer-logo" style="height: 40px; width: auto;">
         <p>Contact Us: Address | Email | Social Links</p>
     </div>
 </div>
