--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav>
-    <a href="/">
-        <img src="/images/mistralab2.png" alt="MIStraLab Logo" style="height: 40px; vertical-align: middle;">
+    <a href="/" style="display: inline-block;">
+        <img src="/images/mistralab2.png" alt="MIStraLab Logo">
     </a>
     <a href="/">Home</a>
     <a href="/team/">Team</a>
