--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,6 +1,12 @@
 <div class="footer">
     <div class="footer-content">
+        <!-- METU Logo on the Left -->
         <img src="/images/metulogo.png" alt="METU Logo" class="footer-logo">
-        <p class="footer-text">Contact Us: Address | Email | Social Links</p>
+        
+        <!-- Footer Text at Center -->
+        <div class="footer-text">
+            <p><a href="/contact/">Contact Us</a> | <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Follow Us on Instagram</a></p>
+            <p>METU MIStraLab 2025</p>
+        </div>
     </div>
-</div
+</div>
