--- a/css/style.css
+++ b/css/style.css
@@ -62,24 +62,35 @@ nav img {
 .footer {
     background-color: #003366;
     color: white;
-    padding: 20px 0; /* Increase vertical padding */
+    padding: 40px 0; /* Make footer twice as big */
     margin-top: 30px;
 }
 
 .footer-content {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 15px;
+    justify-content: space-between; /* Push logo left, text center */
     max-width: 1100px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .footer-logo {
-    height: 80px; /* Double the previous size */
+    height: 120px; /* Make METU logo even bigger */
     object-fit: contain;
 }
 
 .footer-text {
-    margin: 0;
+    flex-grow: 1; /* Allow text to center */
+    text-align: center;
+}
+
+.footer-text a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.footer-text a:hover {
+    text-decoration: underline;
 }
