--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,7 +5,7 @@
         
         <!-- Footer Text at Center -->
         <div class="footer-text">
-            <p><a href="/contact/">Contact Us</a> | <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Follow Us on Instagram</a></p>
+            <p><a href="/contact/">Contact Us</a> | <a href="https://www.instagram.com/mistra_metu" target="_blank">Follow Us on Instagram</a></p>
             <p>METU MIStraLab 2025</p>
         </div>
     </div>
