--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,11 +1,14 @@
 <div class="footer">
     <div class="footer-content">
-        <!-- METU Logo on the Left -->
-        <img src="/images/metulogo.png" alt="METU Logo" class="footer-logo">
-        
-        <!-- Footer Text at Center -->
+        <div class="footer-logo-container">
+            <img src="/images/metulogo.png" alt="METU Logo" class="footer-logo">
+        </div>
+
         <div class="footer-text">
-            <p><a href="/contact/">Contact Us</a> | <a href="https://www.instagram.com/mistra_metu" target="_blank">Follow Us on Instagram</a></p>
+            <p>
+                <a href="/contact/">Contact Us</a> | 
+                <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Follow Us on Instagram</a>
+            </p>
             <p>METU MIStraLab 2025</p>
         </div>
     </div>
