--- a/partials/footer.html
+++ b/partials/footer.html
@@ -9,7 +9,9 @@
                 <a href="/contact/">Contact Us</a> | 
                 <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Follow Us on Instagram</a>
             </p>
-            <p>METU MIStraLab 2025</p>
+            <p>
+                <a href="https://mete.metu.edu.tr/" target="_blank">METU METE</a>
+                MIStraLab, 2025</p>
         </div>
     </div>
 </div>
