--- a/partials/footer.html
+++ b/partials/footer.html
@@ -10,8 +10,8 @@
                 <a href="https://instagram.com/YOUR_INSTAGRAM" target="_blank">Follow Us on Instagram</a>
             </p>
             <p>
-                <a href="https://mete.metu.edu.tr/" target="_blank">METU METE</a>
-                MIStraLab, 2025</p>
+                <a href="https://mete.metu.edu.tr/" target="_blank">METU METE</a></p>
+             <p> MIStraLab, 2025</p>
         </div>
     </div>
 </div>
