--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,11 +1,20 @@
-<nav>
-    <a href="/" style="display: inline-block;">
-        <img src="/images/mistralab2.png" alt="MIStraLab Logo">
+<nav class="navbar">
+  <div class="navbar-container">
+    <a href="/" class="logo">
+      <img src="/images/mistralab2.png" alt="MIStraLab Logo" />
     </a>
-    <a href="/">Home</a>
-    <a href="/team/">Team</a>
-    <a href="/publications/">Publications</a>
-    <a href="/research/">Research</a>
-    <a href="/news/">News</a>
-    <a href="/contact/">Contact</a>
+
+    <button class="hamburger" id="hamburger-toggle" aria-label="Menu">
+      ☰
+    </button>
+
+    <div class="nav-links" id="nav-links">
+      <a href="/">Home</a>
+      <a href="/team/">Team</a>
+      <a href="/publications/">Publications</a>
+      <a href="/research/">Research</a>
+      <a href="/news/">News</a>
+      <a href="/contact/">Contact</a>
+    </div>
+  </div>
 </nav>
